--- a/manifest.json
+++ b/manifest.json
@@ -23,8 +23,8 @@
 
 	"content_scripts":[
 		{
-			"matches": ["*://*.whatsapp.com/*"],
-			"js":["whatsweb_cs.js", "jquery-1.10.2.js", "jquery.dataTables.js", "jquery-3.1.1.js"],
+			"matches": ["https://web.whatsapp.com/*"],
+			"js":["whatsweb_cs.js",   "jquery-1.10.2.js", "jquery.dataTables.js"], //, "jquery-3.1.1.js"],
 			"css":["whatsweb_cs.css"]
 		}
 	],
@@ -33,6 +33,6 @@
 		"tabs",
         "storage", 
         "notifications",
-		"*://*.whatsapp.com/*"
+		"https://web.whatsapp.com/*"
     ]
 }
