--- a/manifest.json
+++ b/manifest.json
@@ -1,38 +1,41 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
+    "name": "WhatSfw",
+    "description": "Cambia el diseño de Whatsapp Web opacando imágenes (Safe For Work).",
+    "version": "1.3",
     
-    "name": "Whatsfw",
-    "description": "Edita el diseño de WhatsappWeb opacando las imágenes para tener discreción al visualizarlas (Safe For Work).",
-    "version": "1.2",
-
-	"page_action": {
-		"default_icon":  { "16": "icon16.png",
-								  "24": "icon24.png",
-								  "32": "icon32.png",
-							      "48": "icon48.png",
-								  "128": "icon128.png"},
-		"default_title":"Whatsapp SFW",
-		"default_popup":"popup.html"
-	},
+    "action": {
+        "default_icon": {
+            "16": "icon16.png",
+            "32": "icon32.png",
+            "48": "icon48.png",
+            "128": "icon128.png"
+        },
+        "default_title": "WhatsApp SFW",
+        "default_popup": "popup.html"
+    },
 
     "options_page": "options.html",
 
     "background": {
-        "scripts": ["eventPage.js"],
-        "persistent": false
+        "service_worker": "background.js"
     },
 
-	"content_scripts":[
-		{
-			"matches": ["https://web.whatsapp.com/*"],
-			"js":["whatsweb_cs.js", "jquery-1.12.4.min.js", "bootstrap-3.3.min.js"],
-			"css":["bootstrap-3.3.min.css"]
-		}
-	],
-	
-    "permissions" : [
-		"tabs",
-        "storage", 
-		"https://web.whatsapp.com/*"
+    "permissions": [
+        "storage",
+        "activeTab",
+        "scripting"
+    ],
+
+    "host_permissions": [
+        "https://web.whatsapp.com/*"
+    ],
+
+    "content_scripts": [
+        {
+            "matches": ["https://web.whatsapp.com/*"],
+            "js": ["whatsweb_cs.js", "jquery-1.12.4.min.js", "bootstrap-3.3.min.js"],
+            "css": ["bootstrap-3.3.min.css"]
+        }
     ]
 }
